Removed usage of javax.xml.bind.DataTypeConverter for compilation using Java 9 which has removed this from the standard JDK